{{$NEXT}}

0.062     2012-11-08 10:52:02 America/Los_Angeles

     Interface Changes:

     * If the commit message for a Committable action is empty (but defined)
       then we automatically fall back to using the default message.

     Interal API Changes:

     * Actions that take a stack name argument can now accept a stack
       object as well.

     * Pinto::Util has been moved from this distribution to Pinto-Common.


0.061     2012-10-30 17:19:10 America/Los_Angeles

     Interface Changes:

     NONE

     Interal API Changes:

     * Some query optimizations, to benefit alpha.stratopan.com

     * Stack and Revision objects are now sortable.  In string context,
       Stacks sort by name.  In numeric context, they sort by Revision.
       Revisions sort chronologically.

0.060     2012-10-23 10:57:41 America/Los_Angeles

     New Features:

     You can now set the default stack at the same time that you
     create or copy a stack.

     Other Changes:

     The output of the Blame action now has the familiar format of the
     List action, and records are sorted by package name.

0.059     2012-10-20 00:52:34 America/Los_Angeles

     Important:

     This version of Pinto is not compatible with repositories that
     were created with prior versions.  Please contact thaljef@cpan.org
     if you need to migrate an old repository.

     Interface Changes:

     Stack names and property names are no longer forced to lowercase.
     Instead, we preserve the original case when they are created.  But
     subsequent comparisons or lookups are done irrespective of case.

     Author IDs are no longer forced to uppercase.  However, the 
     author ID in the canonical path for any distribution that you 
     add will always be uppercase, which is consistent with PAUSE. 
     When listing distributions/packages for a certain author, the
     comparison is done irrespective of case.

     Other Changes:
